force-app/main/default/objects/sma__MASettingsGroup__c/sma__MASettingsGroup__c.object-meta.xml
<CustomObject>
    <label>MapAnything Settings Group</label>
    <nameField>
        <label>MapAnything Settings Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Settings Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>