force-app/main/default/objects/sma__MASettingsGroup__c/fields/sma__FolderAdmin__c.field-meta.xml
<CustomField>
    <fullName>sma__FolderAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folder Admin</label>
    <type>Checkbox</type>
</CustomField>