force-app/main/default/objects/sma__MASettingsGroup__c/fields/sma__MaxExportSize__c.field-meta.xml
<CustomField>
    <fullName>sma__MaxExportSize__c</fullName>
    <label>Max Export Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>