force-app/main/default/objects/sma__MASettingsGroup__c/fields/sma__ShowUserFolders__c.field-meta.xml
<CustomField>
    <fullName>sma__ShowUserFolders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show User Folders</label>
    <type>Checkbox</type>
</CustomField>