force-app/main/default/objects/sma__MASettingsGroup__c/fields/sma__ShowWeather__c.field-meta.xml
<CustomField>
    <fullName>sma__ShowWeather__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Weather</label>
    <type>Checkbox</type>
</CustomField>